--- a/cmd/fluxctl/install/templates/flux-account.yaml.tmpl
+++ b/cmd/fluxctl/install/templates/flux-account.yaml.tmpl
@@ -7,6 +7,7 @@ metadata:
   labels:
     name: flux
   name: flux
+  namespace: {{ .Namespace }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
@@ -34,4 +35,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: flux
-    namespace: default
+    namespace: {{ .Namespace }}
