--- a/install/templates/flux-secret.yaml.tmpl
+++ b/install/templates/flux-secret.yaml.tmpl
@@ -2,6 +2,6 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: flux-git-deploy
-  namespace: {{ .Namespace }}
+  name: flux-git-deploy{{ if .Namespace }}
+  namespace: {{ .Namespace }}{{ end }}
 type: Opaque
