--- a/install/templates/flux-deployment.yaml.tmpl
+++ b/install/templates/flux-deployment.yaml.tmpl
@@ -146,8 +146,8 @@ spec:
         - --listen-metrics=:3031
 {{ if .AdditionalFluxArgs }}
         # Additional arguments{{ range .AdditionalFluxArgs }}
-        - {{ . }}{{ end }}{{ end }}
-
+        - {{ . }}{{ end }}
+{{ end }}
       # Optional DNS settings, configuring the ndots option may resolve
       # nslookup issues on some Kubernetes setups.
       # dnsPolicy: "None"
