Added a readonly flag to the install command
Allow the daemon to be installed with the readonly flag present
using the install command. Modified the cmd flags and the deployment
template.

--- a/pkg/install/templates/flux-deployment.yaml.tmpl
+++ b/pkg/install/templates/flux-deployment.yaml.tmpl
@@ -159,6 +159,9 @@ spec:
 
         # Tell flux it has readonly access to the repo (default `false`)
         # - --git-readonly
+{{ if .GitReadOnly }}
+        - --git-readonly
+{{ end }}
 
         # Instruct flux where to put sync bookkeeping (default "git", meaning use a tag in the upstream git repo)
         # - --sync-state=git
