Added manifest generation flag

--- a/pkg/install/templates/flux-deployment.yaml.tmpl
+++ b/pkg/install/templates/flux-deployment.yaml.tmpl
@@ -172,6 +172,13 @@ spec:
         # - --connect=wss://cloud.weave.works/api/flux
         # - --token=abc123abc123abc123abc123
 
+        # Enable manifest generation (default `false`)
+{{- if .ManifestGeneration }}
+        - --manifest-generation=true
+{{- else }}
+        # - --manifest-generation=false
+{{- end }}
+
         # Serve /metrics endpoint at different port;
         # make sure to set prometheus' annotation to scrape the port value.
         - --listen-metrics=:3031
