nodeSelector to deployment templates for mixed OS

--- a/pkg/install/templates/flux-deployment.yaml.tmpl
+++ b/pkg/install/templates/flux-deployment.yaml.tmpl
@@ -18,6 +18,8 @@ spec:
       labels:
         name: flux
     spec:
+      nodeSelector:
+        beta.kubernetes.io/os: linux
       serviceAccountName: flux
       volumes:
       - name: git-key
